--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <ul class="info-list list">
             <li class="info-item">
                 <div class="info-soc">
-                    <svg class="info-icon">
-                        <use href="./images/icons.svg#icon-antena" width="70px" height="70px"></use>
+                    <svg class="info-icon" width="70px" height="70px">
+                        <use href="./images/icons.svg#icon-antena" ></use>
                     </svg>
                 </div>
                 <h3 class="info-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -64,8 +64,8 @@
             </li>
             <li class="info-item">
                 <div class="info-soc">
-                    <svg class="info-icon">
-                        <use href="./images/icons.svg#icon-clock" width="70px" height="70px"></use>
+                    <svg class="info-icon" width="70px" height="70px">
+                        <use href="./images/icons.svg#icon-clock" ></use>
                     </svg>
                 </div>
                 <h3 class="info-title">ПУНКТУАЛЬНІСТЬ</h3>
@@ -73,8 +73,8 @@
             </li>
             <li class="info-item">
                 <div class="info-soc">
-                    <svg class="info-icon">
-                        <use href="./images/icons.svg#icon-diagram" width="70px" height="70px"></use>
+                    <svg class="info-icon" width="70px" height="70px">
+                        <use href="./images/icons.svg#icon-diagram" ></use>
                     </svg>
                 </div>
                 <h3 class="info-title">ПЛАНУВАННЯ</h3>
@@ -82,8 +82,8 @@
             </li>
             <li class="info-item">
                 <div class="info-soc">
-                    <svg class="info-icon">
-                        <use href="./images/icons.svg#icon-astronaut" width="70px" height="70px"></use>
+                    <svg class="info-icon" width="70px" height="70px">
+                        <use href="./images/icons.svg#icon-astronaut" ></use>
                     </svg>
                 </div>
                 <h3 class="info-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -285,7 +285,7 @@
     </address>
     </div>
     <div class="soc-container">
-    <h3 class="soc-title">ПРИЄДНУЙТЕСЬ</h3>
+    <p class="soc-title">ПРИЄДНУЙТЕСЬ</p>
     <ul class="social-soc-list list">
         <li class="social-soc-items"><a href="#" class="social-soc-link link">
           <svg class="social-soc-icons" width="20px" height="20px">
