--- a/portfolio.html
+++ b/portfolio.html
@@ -54,86 +54,86 @@
     
     <ul class="examples-list list">
         <li class="examples-items">
-            <div class="examples-box"><a href="" class="examples-link link">
+            <a href="" class="examples-link link">
             <img src="./images/portfolio1.jpg" alt="Веб-сайт проекту Технокряк" width="370" height="294">
             <div class="examples-bord">
             <h2 class="examples-title">Технокряк</h2>
             <p>Веб-сайт</p>
             </div>
-        </a></div>
-        </li>
         </a>
+        </li>
+        
         <li class="examples-items">
-            <div class="examples-box"><a href="" class="examples-link link">
+            <a href="" class="examples-link link">
             <img src="./images/portfolio2.jpg" alt="Дизайн постера New Orlean vs Golden Star" width="370" height="294">
             <div class="examples-bord">
             <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
             </div>
-        </a></div>
+        </a>
         </li>
         <li class="examples-items">
-            <div class="examples-box"><a href="" class="examples-link link">
+            <a href="" class="examples-link link">
             <img src="./images/portfolio3.jpg" alt="Додаток ресторану Seafood" width="370" height="294">
             <div class="examples-bord">
             <h2 class="examples-title">Ресторан Seafood</h2>
             <p>Додаток</p>
             </div>
-        </a></div>
+        </a>
         </li>
         <li class="examples-items">
-            <div class="examples-box"><a href="" class="examples-link link">
+            <a href="" class="examples-link link">
             <img src="./images/portfolio4.jpg" alt="Маркетинг проєкту Prime" width="370" height="294">
             <div class="examples-bord">
             <h2 class="examples-title">Проєкт Prime</h2>
             <p>Маркетинг</p>
             </div>
-        </a></div>
+        </a>
         </li>
         <li class="examples-items">
-            <div class="examples-box"><a href="" class="examples-link link">
+            <a href="" class="examples-link link">
             <img src="./images/portfolio5.jpg" alt="Додаток проєкту Boxes" width="370" height="294">
             <div class="examples-bord">
             <h2 class="examples-title">Проєкт Boxes</h2>
             <p>Додаток</p>
             </div>
-        </a></div>
+        </a>
         </li>
         <li class="examples-items">
-            <div class="examples-box"><a href="" class="examples-link link">
+            <a href="" class="examples-link link">
             <img src="./images/portfolio6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370" height="294">
             <div class="examples-bord">
             <h2 class="examples-title">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
             </div>
-        </a></div>
+        </a>
         </li>
         <li class="examples-items">
-            <div class="examples-box"><a href="" class="examples-link link">
+            <a href="" class="examples-link link">
             <img src="./images/portfolio7.jpg" alt="Дизайн видання Limited Edition" width="370" height="294">
             <div class="examples-bord">
             <h2 class="examples-title">Видання Limited Edition</h2>
             <p>Дизайн</p>
             </div>
-        </a></div>
+        </a>
         </li>
         <li class="examples-items">
-            <div class="examples-box"><a href="" class="examples-link link">
+            <a href="" class="examples-link link">
             <img src="./images/portfolio8.jpg" alt="Маркетинг проєкту LAB" width="370" height="294">
             <div class="examples-bord">
             <h2 class="examples-title">Проєкт LAB</h2>
             <p>Маркетинг</p>
             </div>
-        </a></div>
+        </a>
         </li>
         <li class="examples-items">
-            <div class="examples-box"><a href="" class="examples-link link">
+            <a href="" class="examples-link link">
             <img src="./images/portfolio9.jpg" alt="Додаток Growing Business" width="370" height="294">
             <div class="examples-bord">
             <h2 class="examples-title">Growing Business</h2>
             <p>Додаток</p>
             </div>
-        </a></div>
+        </a>
         </li>
     </ul>
     </div>
